# REX-Robot

./: .gitignore  LICENSE  README.md
clearpath/ExarKernelDriver/: .built-in.a.cmd  .xr_usb_serial_common.ko.cmd  .xr_usb_serial_common.mod.cmd  .xr_usb_serial_common.mod.o.cmd  .xr_usb_serial_common.o.cmd
gantry_description/: CMakeLists.txt  package.xml
gantry_description/launch/: gantry_upload.launch  gantry_urdf_view.launch
gantry_description/meshes/: Assembly_without_slider.stl  Simulation_Base.STL  Simulation_X_Axis.STL  Simulation_Y_Axis.STL  Simulation_Z_Axis.STL  gantry_base_plate.stl  gripper.STL  in-hand.STL  pitch.STL  roll.STL  roll_mini.STL  roll_motor.STL  slider.stl  yaw.STL
gantry_description/urdf/: common.gazebo.xacro  conveyor_robot.urdf  gantry.bak.urdf  gantry.gazebo.xacro  gantry.rviz  gantry.transmission.xacro  gantry.urdf  gantry.urdf.bak  gantry.urdf.xacro  gantry.urdf.xacro.old  gantry_joint_limited_robot.urdf.xacro  gantry_robot.urdf.xacro  new_gantry_joint_limited_robot.urdf  new_gantry_robot.urdf
gantry_driver/: CMakeLists.txt  LICENSE  README.md  package.xml
gantry_driver/include/gantry_driver/: Axis.h  Supervisor.h  server.h
gantry_driver/include/gantry_driver/inc/inc-private/linux/: SerialLinux.h  tekEventsLinux.h
gantry_driver/include/gantry_driver/inc/inc-private/sFound/: SerialEx.h  lnkAccessAPI.h  lnkAccessCommon.h  mnDiags.h  tekEvents.h
gantry_driver/include/gantry_driver/inc/inc-pub/: pubSysCls.h
gantry_driver/src/: Axis.cpp  Supervisor.cpp  server.cpp
gantry_gazebo/: CMakeLists.txt  package.xml
gantry_gazebo/controller/: arm_controller_gantry.yaml
gantry_gazebo/launch/: controller_utils.launch  gantry.launch  gantry_joint_limited.launch
gantry_move/: CMakeLists.txt  package.xml
gantry_move/action/: gantry_move.action
gantry_move/config/: table.yaml
gantry_move/include/: gantry_action_client.h  svd.h
gantry_move/launch/: gantry_move.launch  moveit.rviz
gantry_move/msg/: top_view_scan.msg
gantry_move/src/: action_client.cpp  action_server.cpp  clicked_point_subscriber.cpp  get_pose.cpp  get_pose_new.cpp  mega_buds_clean.cpp  octo_map_node.cpp  octo_map_node_update.cpp  pub_ros_param.cpp  simple_node.cpp
gantry_move/src/FOLDER/: pose.csv  pose_clicked.csv
gantry_moveit_config/: CMakeLists.txt  package.xml
gantry_moveit_config/config/: controllers.yaml  fake_controllers.yaml  gantry.srdf  joint_limits.yaml  kinematics.yaml
gantry_moveit_config/launch/: default_warehouse_db.launch  demo.launch  gantry_moveit_controller_manager.launch.xml  gantry_moveit_planning_execution.launch  joint_state_publisher.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  run_benchmark_ompl.launch  trajectory_execution.launch.xml  warehouse.launch
gantry_msgs/: CMakeLists.txt  package.xml
gantry_msgs/msg/: TrayData.msg  TrayLevel.msg
