<?xml version="1.0"?>
<package format="2">
  <name>gantry_move</name>
  <version>0.0.0</version>
  <description>The gantry_move package</description>

  <maintainer email="asilwal@andrew.cmu.edu">Abhi</maintainer>
  <author email="asilwal@andrew.cmu.edu">Abhi</author>
  <license>BSD</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <!--build_depend>dynamixel_sdk</build_depend-->
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <!--build_depend>ros_faster_rcnn</build_depend-->
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!--<build_depend>gantry_msgs</build_depend>-->
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen_conversions</build_depend>
  
  <build_export_depend>actionlib</build_export_depend>
  <!--build_export_depend>dynamixel_sdk</build_export_depend -->
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>geometric_shapes</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>interactive_markers</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_perception</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <!--build_export_depend>ros_faster_rcnn</build_export_depend-->
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2_eigen</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  
  <exec_depend>actionlib</exec_depend>
  <!--exec_depend>dynamixel_sdk</exec_depend -->
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <!--exec_depend>ros_faster_rcnn</exec_depend-->
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!--<exec_depend>gantry_msgs</exec_depend>-->
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>

</package>
